--- a/wol.cabal
+++ b/wol.cabal
@@ -5,8 +5,8 @@ description:         A program and library to a send WoL Magic Packet, to
                      remotely start a computer.
                      .
                      This program is useful if you have a computer that you
-                     keep at a friends house because he has a fast internet
-                     connection. But he keeps turning off the machine saying
+                     keep at a friend's house because he has a fast internet
+                     connection. But he keeps turning the machine off, saying
                      that it warms up his room and your not using it anyway.
                      But now you need a way to turn the machine back on...
                      .
@@ -30,9 +30,9 @@ executable wol
 
 library
   build-depends:     base >= 3 && < 5,
-                     network == 2.2.1,
-                     split == 0.1.1
+                     network >= 2.2.1 && < 2.3,
+                     split >= 0.1.1 && < 0.2
   hs-source-dirs:    src
   exposed-modules:   Network.WoL
-  other-modules:     Network.MacAddress
+                     Network.MacAddress
 
