--- a/wol.cabal
+++ b/wol.cabal
@@ -23,6 +23,10 @@ category:            Network
 build-type:          Simple
 cabal-version:       >= 1.6
 
+source-repository head
+  type:             git
+  location:         https://github.com/tomlokhorst/wol.git
+
 executable wol
   build-depends:     base >= 3 && < 5
   main-is:           WoL.hs
