--- a/wol.cabal
+++ b/wol.cabal
@@ -27,8 +27,8 @@ build-type:          Simple
 cabal-version:       >= 1.6
 
 source-repository head
-  type:             git
-  location:         https://github.com/tomlokhorst/wol.git
+  type:              git
+  location:          https://github.com/tomlokhorst/wol.git
 
 executable wol
   build-depends:     base >= 3 && < 5
@@ -37,9 +37,9 @@ executable wol
 
 library
   build-depends:     base >= 3 && < 5,
+                     bytestring,
                      network,
-                     split,
-                     bytestring
+                     split
   hs-source-dirs:    src
   exposed-modules:   Network.WoL
                      Network.MacAddress
